--- a/PP2/scriptorium/package.json
+++ b/PP2/scriptorium/package.json
@@ -10,11 +10,13 @@
   },
   "dependencies": {
     "@prisma/client": "^5.20.0",
+    "ace-builds": "^1.36.5",
     "bcrypt": "^5.1.1",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
     "next": "14.2.15",
     "react": "^18",
+    "react-ace": "^13.0.0",
     "react-dom": "^18"
   },
   "devDependencies": {
