--- a/PP2/scriptorium/docker/DockerFile.python
+++ b/PP2/scriptorium/docker/DockerFile.python
@@ -1,6 +1,9 @@
 # Use the official Python base image
 FROM python:3.11-slim
 
+# Install timeout command (part of coreutils)
+RUN apt-get update && apt-get install -y coreutils
+
 # Set the working directory inside the container
 WORKDIR /scriptorium
 
