modified docker compsoe yml file and docker files to fix path issue

--- a/PP2/scriptorium/docker/DockerFile.python
+++ b/PP2/scriptorium/docker/DockerFile.python
@@ -5,10 +5,10 @@ FROM python:3.11-slim
 RUN apt-get update && apt-get install -y coreutils
 
 # Set the working directory inside the container
-WORKDIR /scriptorium
+WORKDIR /scriptorium_docker_files
 
 # Copy any necessary files 
-# In this case, this copies all files in the scriptorium directory
+# In this case, this copies all files in the current directory (docker)
 COPY . .
 
 # Verify the Python installation
