added lisp support

--- a/PP2/scriptorium/docker/docker-compose.yml
+++ b/PP2/scriptorium/docker/docker-compose.yml
@@ -126,6 +126,21 @@ services:
       resources:
         limits:
           memory: 512m  # Set memory limit to 512 MB
+  
+  lisp_service:
+    build:
+      context: .  # Set the context to the current folder (docker)
+      dockerfile: DockerFile.Lisp  # Path to the Dockerfile for Swift
+    container_name: lisp_container
+    image: lisp_image
+    networks:
+      - scriptorium_network
+    tty: true  # Keeps the container running
+    deploy:
+      resources:
+        limits:
+          memory: 512m  # Set memory limit to 512 MB
+
 
 
 networks:
