--- a/package.json
+++ b/package.json
@@ -18,12 +18,13 @@
     "react-dom": "^18"
   },
   "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
+    "@types/node": "^20.17.7",
+    "@types/react": "^18.3.12",
     "@types/react-dom": "^18",
-    "postcss": "^8",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.49",
     "prisma": "^5.21.1",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "tailwindcss": "^3.4.15",
+    "typescript": "^5.7.2"
   }
 }
